# ecommerce-api

./: .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose_unit_test.yml  dump.rdb  ecommerce.postman_collection.json  main.py  pyproject.toml  pytest.ini
.github/workflows/: Ci.yaml  build-deploy.yml  test.yaml
alembic/: env.py
alembic/versions/: 159b0963dac5_added_user_agent_column_to_refresh_.py  160dd810dc36_changed_price_to_integer_and_rating_to_.py  16dd88eb90c4_added_no_of_tries_column_in_otp_table.py  1f9141f4baa1_added_otp_type_column_to_otp_table.py  24b2bbd40025_added_status_to_order_item_table.py  2dd80012e2ae_changed_updated_timestamp_to_timezone.py  3912cf353291_changed_phone_number_unique_to_false.py  4f5b3a8f6967_created_all_tables.py  5d9b028dd94e_added_new_fields.py  621284eeef44_editted_phone_number_from_bigint_to_.py  6fafc70bbb93_created_all_tables.py  (+4 more)
core/: config.py  db.py  errors.py  middleware.py  paystack.py  schema.py  stripe_payment.py  tokens.py
crud/: __init__.py  auth.py  base.py  cart.py  customer.py  order.py  otp.py  product.py  vendor.py
endpoints/: __init__.py  auth.py  cart.py  customer.py  order.py  product.py  vendor.py
models/: __init__.py  auth_user.py  cart.py  customer.py  order.py  orders.py  product.py  vendor.py
schemas/: __init__.py  auth.py  base.py  cart.py  customer.py  enums.py  order.py  otp.py  product.py  vendor.py
services/: __init__.py  auth_service.py  cart_service.py  customer_service.py  order_service.py  product_service.py  vendor_service.py
task_queue/: Dockerfile  main.py
tests/: Dockerfile  conftest.py  mock_dependencies.py
utils/: email_validation.py  generate_otp.py  generate_sku.py  password_utils.py  random_id.py  send_email.py  tracking_number.py  validate_password.py
(+29 files in other folders)
